feat (sso) :added google sign in for public user
